--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 @import "tailwindcss";
+
+html {
+  overflow-y: scroll;
+}
+
+.font-rubik {
+  font-family: "Rubik", sans-serif;
+}
